# idgen

./: .gitignore  Cargo.toml  README.md  compile.sh
.github/workflows/: release.yml
scripts/: publish.sh  release.sh
src/: cli.rs  id.rs  inspector.rs  lib.rs  main.rs  processor.rs  processor_clap.rs
tests/: exit_code_tests.rs  id_tests.rs  inspector_tests.rs  processor_tests.rs
