[package]
authors = [ "Mohamed Aamir Maniar <aamir.maniar@maniartech.com>" ]
edition = "2018"
name = "idgen"
version = "1.2.0"

[dependencies]
bson = { version = "3.0.0", default-features = false, features = [
    "compat-3-0-0",
] }
cuid = "1.3.3"
nanoid = "0.4.0"
ulid = "1.2.1"
uuid = { version = "1.4.1", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "md5",
    "sha1",
    "fast-rng",
    "std",
], default-features = false }
