[package]
authors = [ "Mohamed Aamir Maniar <aamir.maniar@maniartech.com>" ]
edition = "2018"
name = "idgen"
version = "1.4.0"
description = "A lightweight, powerful CLI tool for generating UUIDs (v1-v5), NanoIDs, CUIDs, ULIDs, and MongoDB ObjectIDs."
license = "MIT"
repository = "https://github.com/maniartech/idgen"
readme = "README.md"
keywords = ["uuid", "cli", "generator", "unique", "id"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
bson = { version = "3.0.0", default-features = false, features = [
    "compat-3-0-0",
] }
cuid = "1.3.3"
nanoid = "0.4.0"
ulid = "1.2.1"
uuid = { version = "1.18.1", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "md5",
    "sha1",
    "fast-rng",
    "std",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
