[package]
authors = [ "Mohamed Aamir Maniar <aamir.maniar@maniartech.com>" ]
edition = "2021"
name = "idgen-cli"
version = "1.4.0"
description = "A lightweight, powerful CLI tool for generating UUIDs (v1-v5), NanoIDs, CUIDs, ULIDs, and MongoDB ObjectIDs."
license = "MIT"
repository = "https://github.com/maniartech/idgen"
readme = "README.md"
keywords = ["uuid", "cli", "generator", "unique", "id"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "idgen"
path = "src/main.rs"

[dependencies]
bson = { version = "3.0.0", default-features = false, features = [
    "compat-3-0-0",
] }
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
cuid = "1.3.3"
nanoid = "0.4.0"
ulid = "1.2.1"
uuid = { version = "1.18.1", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "md5",
    "sha1",
    "fast-rng",
    "std",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
